--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -35,7 +35,7 @@ dependencies:
   flutter_config: ^2.0.0
   firebase_storage: ^3.1.1
   firebase_core: ^0.4.0
-  scoped_model: ^1.1.0
+  scoped_model: ^2.0.0
   flutter_map: ^0.12.0
   latlong: ^0.6.1
   google_maps_flutter: ^2.1.10
