--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,6 +52,9 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk {
+            debugSymbolLevel
+        }
     }
 
     signingConfigs {
@@ -69,6 +72,7 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             //signingConfig signingConfigs.debug
              signingConfig signingConfigs.release
+
         }
     }
 }
